--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
         <title>Primeasia University CSE Deparment</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link rel="stylesheet" type="text/css" href="style.css">
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
        <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+
+       <!-- Favicon -->
+        <link rel="shortcut icon" href="https://www.primeasia.edu.bd/resources/images/favicon/favicon.ico" type="image/x-icon" />
+        <link rel="apple-touch-icon" sizes="60x60" href="https://www.primeasia.edu.bd/resources/images/favicon/apple-icon-60x60.png">
+
+
 
 
     </head>
@@ -30,13 +37,16 @@
                         <div id="banner" >
                           <div class="carousel-inner" role="listbox" >
                                 <div  >
-          			        	        <img class="img-responsive"  src="https://www.primeasia.edu.bd/resources/images/homeslider/slider-17.jpg" alt="Primeasia University" >
+                               <img class="img-responsive"  src="https://www.primeasia.edu.bd/resources/images/homeslider/slider-17.jpg" alt="Primeasia University" >
+                             </div>
+
                                 </div>
 
                           </div>
                         </div>
   			        	</div>
-          </div>
+
+
 
 <!---------------- Manue  start-------------- Manue  start------- Manue  start------ Manue  start------>
 <!---------------- Manue  start-------------- Manue  start------- Manue  start------ Manue  start------>
@@ -79,6 +89,130 @@
                 <!---------------- content ddddddddddddddddddddddddddddddd-------------content start------------------>
                 <!---------------- content ddddddddddddddddddddddddddddddd-------------content start------------------>
                 <!---------------- content ddddddddddddddddddddddddddddddd-------------content start------------------>
+                <!---------------- SLIDE SHOW --------------  SLIDE SHOW -------  SLIDE SHOW ------  SLIDE SHOW ------>
+
+                          <div >
+
+                              <div class="slideshow-container">
+
+                                    <div class="mySlides fade">
+                                    <div class="numbertext">1 / 13</div>
+                                    <img src="https://www.primeasia.edu.bd/resources/images/homeslider/slider-22.jpg" style="width:100%">
+                                    </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">2 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/homeslider/slider-21.jpg" style="width:100%">
+                                      </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">3 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/homeslider/slider-19.jpg" style="width:100%">
+                                      </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">4 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/homeslider/slider-1.png" style="width:100%">
+                                      </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">5 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/homeslider/2.JPG" style="width:100%">
+                                      </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">6 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/homeslider/slider-15.jpg" style="width:100%">
+                                      </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">7 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/homeslider/4.JPG" style="width:100%">
+                                      </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">8 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/homeslider/slider-11.png" style="width:100%">
+                                      </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">9 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/homeslider/slider-20.jpg" style="width:100%">
+                                      </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">10 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/homeslider/slider-13.png" style="width:100%">
+                                      </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">11 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/homeslider/9.JPG" style="width:100%">
+                                      </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">12 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/homeslider/slider-10.png" style="width:100%">
+                                      </div>
+
+                                      <div class="mySlides fade">
+                                      <div class="numbertext">13 / 13</div>
+                                      <img src="https://www.primeasia.edu.bd/resources/images/gallery/admission/DSC_0286.JPG" style="width:100%">
+                                      </div>
+
+                                      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                                      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+                                      </div>
+                                      <br>
+
+                                      <div style="text-align:center">
+                                      <span class="dot" onclick="currentSlide(1)"></span>
+                                      <span class="dot" onclick="currentSlide(2)"></span>
+                                      <span class="dot" onclick="currentSlide(3)"></span>
+                                      <span class="dot" onclick="currentSlide(4)"></span>
+                                      <span class="dot" onclick="currentSlide(5)"></span>
+                                      <span class="dot" onclick="currentSlide(6)"></span>
+                                      <span class="dot" onclick="currentSlide(7)"></span>
+                                      <span class="dot" onclick="currentSlide(8)"></span>
+                                      <span class="dot" onclick="currentSlide(9)"></span>
+                                      <span class="dot" onclick="currentSlide(10)"></span>
+                                      <span class="dot" onclick="currentSlide(11)"></span>
+                                      <span class="dot" onclick="currentSlide(12)"></span>
+                                      <span class="dot" onclick="currentSlide(13)"></span>
+                                      </div>
+
+                                      <script>
+                                              var slideIndex = 1;
+                                              showSlides(slideIndex);
+
+                                              function plusSlides(n) {
+                                                showSlides(slideIndex += n);
+                                              }
+
+                                              function currentSlide(n) {
+                                                showSlides(slideIndex = n);
+                                              }
+
+                                              function showSlides(n) {
+                                                var i;
+                                                var slides = document.getElementsByClassName("mySlides");
+                                                var dots = document.getElementsByClassName("dot");
+                                                if (n > slides.length) {slideIndex = 1}
+                                                if (n < 1) {slideIndex = slides.length}
+                                                for (i = 0; i < slides.length; i++) {
+                                                    slides[i].style.display = "none";
+                                                }
+                                                for (i = 0; i < dots.length; i++) {
+                                                    dots[i].className = dots[i].className.replace(" active", "");
+                                                }
+                                                slides[slideIndex-1].style.display = "block";
+                                                dots[slideIndex-1].className += " active";
+                                              }
+                                              </script>
+
+                          </div>
+
                 <!-------4444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444-------->
                 <div class="w3-row-padding w3-center w3-margin-top">
                   <div class="w3-third">
