--- a/index.html
+++ b/index.html
@@ -668,11 +668,11 @@
       <div id="content_wraffer">
 
 
-                                   <div><p>
+                                   <div><article><p align="justify">
                                      <br>
                                     Primeasia University was founded on an agenda of social responsibilites to provide higher education to all.Since higher education is the most effective tool to meet today’s diversified social challenges including population explosion, illiteracy, poverty, food insecurity, and depleting naturally endowed resources while, side-by-side, entrepreneurship, leadership, and good governance in the society. It is a key to intellectual growth that allows one to develop new models and standards and to be guided by strong moral reasoning, ethics, dignity, and enthusiasm.
-                                    </p>
-                                    <br>
+                                    </p></article>
+                                    <br>>
                                    </div>
 
                                    <div><p>
